--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -23,10 +23,9 @@
     </style>
 
     <style name="BaseEditTextStyle">
-        <item name="android:background">@null</item>
         <item name="android:imeOptions">actionNext</item>
         <item name="android:textSize">@dimen/text_size_large</item>
-
+        <item name="android:background">@color/color_white</item>
         <item name="android:inputType">text</item>
     </style>
 
